zero-schema-macros/tests/ui/fail/64_optional_u16_str.rs
use zero_schema_macros::zero;

#[zero]
struct Invalid {
    value: Option<&'static widestring::U16Str>,
}

fn main() {}
